2004-04-19  Michael Terry  <mike@mterry.name>

	* GNOME_Evolution_Mail.server.in.in:
	* em-account-prefs.[ch]:
	* em-composer-prefs.[ch]:
	* em-folder-browser.c:
	* em-folder-tree.c:
	* em-folder-view.c:
	* em-format-html-display.c:
	* em-format-html.[ch]:
	* em-popup.c:
	* mail-component.c
	* mail-config-druid.c:
	* mail-config.glade:
	* mail-mt.c:
	* mail-send-recv.c:
	* message-list.c:
	* message-tag-followup.c:
	* message-tags.glade: Update the mailer to use icon themes through the
	EIconFactory object in e-util

2004-04-16  David Malcolm  <dmalcolm@redhat.com>

	* importers/netscape-importer.c (netscape_import_accounts):
	Removed unused and uninitialised "url" local that gets g_free-ed

2004-04-15  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-config.c (config_write_style): Change the message display
	widget names to match the ones we are using in 1.5 (rather than
	the ones from earlier versions). Fixes bug #57070.

2004-04-14  Jeffrey Stedfast  <fejj@ximian.com>

	* message-list.c: Added a new "message_list_scrolled" signal so
	our users can listen to this event in order to update saved state.
	(message_list_get_scrollbar_position): Simplified.
	(message_list_set_scrollbar_position): Simplified.

	* em-format.c: Don't complain about message errors ("Internal
	Error: ..."), instead silently fall back to display the message as
	source. Fixes bug #56876.

2004-04-14  Not Zed  <NotZed@Ximian.com>

	* em-folder-view.c (emfv_set_folder_uri): ugh, use the queued
	thread to get the folder, otherwise we can get folders set on the
	display out of order.

	* message-list.c (message_list_set_search): if we set this while
	frozen, save the search elsewhere.
	(message_list_thaw): if we had a frozen-time search, use it when
	we regenerate.

	* em-folder-browser.c (emfb_set_folder): freeze/thaw the
	messagelist around changes so we don't have multiple updates fire
	off changing folders.
	(emfb_activate): remove an unused variable i never used.
