@@ -48,8 +48,6 @@ static void em_account_prefs_destroy    (GtkObject *object);
 
 static void mail_accounts_load (EMAccountPrefs *prefs);
 
-static GdkPixbuf *disabled_pixbuf = NULL;
-static GdkPixbuf *enabled_pixbuf = NULL;
 
 static GtkVBoxClass *parent_class = NULL;
 
@@ -90,10 +88,6 @@ em_account_prefs_class_init (EMAccountPrefsClass *klass)
 	gtk_object_class->destroy = em_account_prefs_destroy;
 	
 	object_class->finalize = em_account_prefs_finalise;
-	
-	/* setup static data */
-	disabled_pixbuf = NULL;
-	enabled_pixbuf = e_icon_factory_get_icon ("stock_mark", 16);
 }
 
 static void
@@ -102,7 +96,7 @@ em_account_prefs_init (EMAccountPrefs *prefs)
 	prefs->druid = NULL;
 	prefs->editor = NULL;
 	
-	prefs->mark_pixbuf = g_object_ref (enabled_pixbuf);
+	prefs->mark_pixbuf = e_icon_factory_get_icon ("stock_mark", 16);
 }
 
 static void
