@@ -297,7 +297,7 @@ em_format_html_file_part(EMFormatHTML *efh, const char *mime_type, const char *f
 	CamelMimePart *part;
 	CamelStream *stream;
 	CamelDataWrapper *dw;
-	gchar *basename;
+	char *basename;
 
 	stream = camel_stream_fs_new_with_name(filename, O_RDONLY, 0);
 	if (stream == NULL)
@@ -596,7 +596,7 @@ efh_format_secure(EMFormat *emf, CamelStream *stream, CamelMimePart *part, Camel
 	    && (valid->encrypt.status != CAMEL_CIPHER_VALIDITY_ENCRYPT_NONE
 		|| valid->sign.status != CAMEL_CIPHER_VALIDITY_SIGN_NONE)) {
 		char *classid;
-		gchar *iconpath;
+		char *iconpath;
 		CamelMimePart *iconpart;
 
 		camel_stream_printf(stream, "<table border=0 width=\"100%%\" cellpadding=3 cellspacing=0 bgcolor=%s><tr>",
